--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,23 @@
 .aboutimage{
     margin:auto;
 }
+
+.aboutinner{
+    font-family: 'Lato', sans-serif;
+    letter-spacing:1px;
+    
+}
+.aboutinnerc{
+    font-family: Microsoft JhengHei;
+    letter-spacing:1px;
+    
+}
+
+.PRinner{
+    color:red;
+    letter-spacing:1px;
+}
+
 .SPword{
     font-family: Microsoft JhengHei;
     line-height: 28px;
